# compile-time-create-file

./: .bumpversion.cfg  .gitignore  Cargo.toml  README.md  README.tpl  test  test.sh
.github/workflows/: ci.yml  test.yml
src/: lib.rs
ui/: dont-overwrite-me.rs  empty-file-null-content.rs  empty-file-null-content.stderr  empty-file-one-arg.rs  empty-file-string-content.rs  multiple-lines-end-newline.rs  multiple-lines.rs  not-overwrite-directory.rs  not-overwrite-file.rs  one-argument.rs  one-argument.stderr  one-line.rs  path-to-absolute-directory.rs  path-to-absolute-file.rs  path-to-file-in-subdirectory.rs  path-to-subdirectory.rs  relative-path.rs  three-arguments.rs  three-arguments.stderr  zero-arguments.rs  zero-arguments.stderr
