[package]
name = "compile-time-create-file"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = [ "parsing" ] }

[dev-dependencies]
trybuild = "1.0.25"

[lib]
proc-macro = true
name = "compile_time_create_file"
