[package]
name = "compile-time-create-file"
version = "0.1.0"
edition = "2018"
description = "Create files and directories at compile time using a procedural macro in Rust."
license-file = "LICENSE"
authors = ["Álvaro Mondéjar <mondejar1994@gmail.com>"]

repository = "https://github.com/mondeja/compile-time-create-file"
readme = "README.md"
keywords = ["build", "create", "file"]
categories = ["development-tools", "development-tools::build-utils"]
exclude = [
    ".github/",
    "ui/",
    "test",
    ".editorconfig",
    ".pre-commit-config.yaml",
    "README.tpl",
    ".bumpversion.cfg"
]


[dependencies]
syn = "^1"

[dev-dependencies]
trybuild = "1.0.25"

[lib]
proc-macro = true
name = "compile_time_create_file"
path = "src/lib.rs"
